--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ trafilatura==1.9.0
 readability-lxml==0.8.1
 markdownify==0.11.6
 openai==1.37.1
+httpx==0.27.2
 sqlalchemy==2.0.31
 psycopg[binary]==3.2.1
 pgvector==0.2.5
